# NewsRecSys

./: .gitignore  NewsRecSys_RunTrain.ipynb  README.md  colab.txt  create_env.txt  create_submission.py  requirements.txt
news-recommendation-llm/: pyproject.toml
news-recommendation-llm/dataset/: download_mind.py
news-recommendation-llm/multirun/2025-11-11/13-00-27/0/.hydra/: hydra.yaml
news-recommendation-llm/multirun/2025-11-11/14-56-17/: multirun.yaml
news-recommendation-llm/multirun/2025-11-11/14-56-17/0/.hydra/: hydra.yaml
news-recommendation-llm/multirun/2025-11-11/15-10-47/0/.hydra/: hydra.yaml
news-recommendation-llm/multirun/2025-11-11/15-14-04/0/.hydra/: hydra.yaml  overrides.yaml
news-recommendation-llm/outputs/2025-11-17/22-10-49/.hydra/: hydra.yaml
news-recommendation-llm/src/config/: config.py
news-recommendation-llm/src/const/: path.py
news-recommendation-llm/src/experiments/: train.py
news-recommendation-llm/src/mind/: MINDDataset.py
news-recommendation-llm/src/utils/: text.py
news_recommender/: utils.py
news_recommender/model/nrms_bert/: nrms_bert_model.py  preprocessing.py  train.py
news_recommender/model/nrms_bert_kg/: NRMSBertKG.py  preprocessing.py  train.py
